@@ -43,7 +43,8 @@ if l1caloESDMon:
     L1PPrMonTool = PPrMon(
         name = "L1PPrMonTool",
         BS_TriggerTowerContainer = "TriggerTowers",
-        LUTHitMap_ThreshMax = 10,
+        #LUTHitMap_ThreshMax = 10,
+        LUTHitMap_ThreshVec=[10,20,30],
         LUTHitMap_LumiBlocks = 10,
         ADCHitMap_Thresh = 50,
         MaxEnergyRange = 256,
